--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.9.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "react": "^18",
